edited env file

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-GOOGLE_ID='283922344435-1i5g4manjcv5ctcjn56neng80qdd30f1.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET='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'
+GOOGLE_ID=283922344435-1i5g4manjcv5ctcjn56neng80qdd30f1.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+MONGODB_URI=mongodb+srv://maserolemojela:1707Kobue@cluster0.0tacyrc.mongodb.net/?retryWrites=true&w=majority
+
+MONGODB_CONNECTION_STRING=mongodb+srv://groupb:siGyDb5l6UAMEEgD@groupb.xmhz5up.mongodb.net/devdb?retryWrites=true&w=majority
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=gerRMuHiFiTnKi062boIoCn6nHGaWzqUpzAu68y4to=
