--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.0",
-    "next": "14.1.0",
+    "mongoose": "^8.1.1",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
